<resources>
    <string name="app_name">Neotia Hospitality</string>
    <string name="action_settings">Settings</string>
    <string name="one">ONE</string>
    <string name="eight">EIGHT</string>
    <string name="five">FIVE</string>
    <string name="four">FOUR</string>
    <string name="nine">NINE</string>
    <string name="seven">SEVEN</string>
    <string name="six">SIX</string>
    <string name="ten">TEN</string>
    <string name="three">THREE</string>
    <string name="two">TWO</string>
    <string name="btn_icon_tabs">Only Icon Tabs</string>
    <string name="title_activity_icon_tabs">Icon Tabs</string>
    <string name="tutorials">Tutorials</string>
    <string name="app_feedback">App Feedback</string>
    <string name="share_app">Share App</string>
    <string name="member_login">Member Login</string>

    <!-- ==========  GCM_message  ============== -->
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="you_have_recieved_a_message_from">You have received a message from</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="image">image</string>
    <string name="exit">Exit</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>

    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected error</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="login">Login</string>
    <string name="full_name">Full name</string>
    <string name="email_id">Email Id</string>
    <string name="mobile_no_optional">Mobile No. (optional)</string>
    <string name="submit">Submit</string>
    <string name="write_app_feedback_comments">Write App Feedback/Comments</string>
    <string name="about">About</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_email_error">Please enter email!</string>
    <string name="member_sign_up">Member sign Up</string>
    <string name="new_password">New Password</string>
    <string name="gender">Gender</string>
    <string name="member_id">Member Id</string>
    <string name="birth_date">Birth Date</string>
    <string name="member_sign_in">Member Sign In</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="member_register">Member Registration</string>
    <string name="password">Password</string>
    <string name="select_gender">Select Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="err_msg_first_name">Enter your name!</string>
    <string name="err_msg_last_name">Enter your last name!</string>
    <string name="err_msg_username">Enter your username!</string>
    <string name="err_msg_email">Enter email address!</string>
    <string name="err_msg_password">Enter your password!</string>
    <string name="err_msg_password_old">Enter your old password!</string>
    <string name="err_msg_password_confirm_match">password is not match with new password!</string>
    <string name="err_msg_password_new">Enter your new password!</string>
    <string name="err_msg_password_confirm">Please confirm password!</string>
    <string name="err_msg_password_two">Password length should be more than 5 characters</string>
    <string name="err_msg_dob">Please select D.O.B.!</string>

    <string name="err_msg_mobile">Enter your mobile!</string>
    <string name="err_msg_mobile_format">Please check your mobile no.</string>
    <string name="err_msg_address">Enter your Address!</string>
    <string name="err_msg_city">Please select city!</string>
    <string name="err_msg_pincode">Please select pincode!</string>
    <string name="email_phone_member_id">Email/Phone/Member Id</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="do_you_want_logout">Do you want to logout?</string>

    <string name="monthTitleFont">roboto_light</string>
    <string name="dayOfWeekFont">roboto_regular</string>
    <string name="dayOfMonthFont">roboto_light</string>
    <string name="currentDayOfMonthFont">roboto_light</string>
    <string name="download_forms">Download Forms</string>
    <string name="guest_charges">Guest Charges</string>
    <string name="administartive">Administartive</string>
    <string name="managing_committee">Managing Committee</string>
    <string name="smart_card">Smart Card</string>
    <string name="membership_detail">Membership Detail</string>
    <string name="club_overview">Club Overview</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="contact_us">Contact Us</string>
    <string name="club_list">Clubs List</string>
    <string name="continue_reading">...Continue Reading</string>
    <string name="no_events">No Confirmed Events Available</string>
    <string name="less_reading">...Less Reading</string>
    <string name="book">Book</string>
    <string name="facebook">Facebook</string>
    <string name="payments">Payments</string>
    <string name="or">OR</string>
    <string name="my_account">My Account</string>
    <string name="no_notifications">No Notifications Available</string>
    <string name="comments">Comments</string>
    <string name="register">Register</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>

</resources>