<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:background="@color/White"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="start"
                android:text="@string/contact_us"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end|center"
                android:layout_weight="0.5"
                android:gravity="end|center">

                <ImageView
                    android:id="@+id/cancelIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_close" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/fullNameET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_username"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_username"
                    android:hint="@string/full_name"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:padding="@dimen/margin_top"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Gray" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/margin_top"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Gray" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/mobileET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_phone"
                    android:hint="@string/mobile_no_optional"
                    android:inputType="phone"
                    android:padding="@dimen/margin_top"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Gray" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/commentsET"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/special_edittext"
                    android:gravity="center|start"
                    android:hint="@string/comments"
                    android:inputType="textMultiLine"
                    android:maxLines="4"
                    android:padding="@dimen/padding"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Gray" />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/SubmitBT"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/button_green_selector"
            android:drawableLeft="@drawable/submit_btn_selector"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/submit_btn_selector"
            android:padding="@dimen/padding"
            android:text="@string/submit"
            android:textColor="@drawable/text_selector"
            android:textSize="18sp" />


    </LinearLayout>

</LinearLayout>




