<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:background="@color/White"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="start"
                android:text="@string/select_gender"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end|center"
                android:layout_weight="0.5"
                android:gravity="end|center">

                <ImageView
                    android:id="@+id/cancelIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_close" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/maleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:background="@drawable/settings_item_selector"
                android:drawableLeft="@drawable/ic_male"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_male"
                android:padding="@dimen/padding"
                android:text="@string/male"
                android:textColor="@drawable/text_selector"
                android:textSize="@dimen/normal_text_size" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/Gray" />


            <TextView
                android:id="@+id/femaleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="@dimen/margin"
                android:background="@drawable/settings_item_selector"
                android:drawableLeft="@drawable/ic_female"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_female"
                android:padding="15dp"
                android:text="@string/female"
                android:textColor="@drawable/text_selector"
                android:textSize="@dimen/normal_text_size" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>