<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            card_view:cardBackgroundColor="@color/White"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="3dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:contentPadding="@dimen/margin_top">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/emailET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top"
                        android:drawableLeft="@drawable/ic_usermail"
                        android:drawablePadding="5dp"
                        android:drawableStart="@drawable/ic_usermail"
                        android:hint="@string/email_phone_member_id"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/padding"
                        android:textColor="@color/Black"
                        android:textColorHint="@color/Gray" />


                    <EditText
                        android:id="@+id/passwordET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top"
                        android:drawableLeft="@drawable/ic_password"
                        android:drawablePadding="5dp"
                        android:drawableStart="@drawable/ic_password"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="@dimen/padding"
                        android:textColor="@color/Black"
                        android:textColorHint="@color/Gray" />


                </LinearLayout>

                <Button
                    android:id="@+id/signInBT"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin"
                    android:background="@drawable/button_green_selector"
                    android:drawableLeft="@drawable/signin_image_selector"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/signin_image_selector"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textColor="@drawable/text_selector"
                    android:textSize="@dimen/normal_text_size" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/signupBT"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/button_green_selector"
            android:drawableLeft="@drawable/signup_image_selector"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/signup_image_selector"
            android:padding="@dimen/padding"
            android:text="@string/register"
            android:textColor="@drawable/text_selector"
            android:textSize="@dimen/normal_text_size" />


        <TextView
            android:id="@+id/forgotPasswordTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:padding="@dimen/padding"
            android:text="@string/forgot_password_"
            android:textColor="@drawable/text_green_hover"
            android:textSize="@dimen/normal_text_size" />


    </LinearLayout>


</LinearLayout>
